[package]
name = "libnsfw"
description = "Minimal HTTP server provides nsfw image detection"
version = "0.1.0"
edition = "2021"
authors = ["zkonge <zkonge@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/zkonge/libnsfw"
repository = "https://github.com/zkonge/libnsfw"
license-file = "LICENSE"

[dependencies]
anyhow = "1"
once_cell = "1"
image = "0.24"
onnxruntime = "0.0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rouille = "3"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
